category fixup - change Android, Links and Reviews to Miscellaneous

--- a/content/2008/02/links-for-2008-02-23.md
+++ b/content/2008/02/links-for-2008-02-23.md
@@ -1,7 +1,7 @@
 Title: Links for 2008-02-23
 Date: 2008-02-25 11:20
 Author: admin
-Category: Links
+Category: Miscellaneous
 Tags: apple, bitlocker, cellphone, EU, firefox, gsm, microsoft, ooxml, pakistan, riaa, virtualization, wikileaks, windows, youtube
 Slug: links-for-2008-02-23
 
