ToDos from last commit

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,9 @@ To Do:
 - tag cloud should be an actual cloud, not a list
 - github
 - disqus
-
+- TWITTER_USERNAME didn't seem to do anything
+- GITHUB_URL didn't seem to do anything
+- SITESUBTITLE doesn't show up
+- 
 
 
