added some more todo items

--- a/todo.txt
+++ b/todo.txt
@@ -3,11 +3,18 @@ To Do:
 - view on mobile
 - preview on smaller screen, make sure category menu doesn't wrap over post title (something's using absolute positioning here??? css fix???)
 - tag cloud should be an actual cloud, not a list
-- github
 - disqus
 - TWITTER_USERNAME didn't seem to do anything
 - GITHUB_URL didn't seem to do anything
 - SITESUBTITLE doesn't show up
-- 
 
+
+
+Plugins:
+- see https://github.com/getpelican/pelican-plugins and figure out how to manage them
+  ideally, I probably want to pull them directly into this repo
+- https://github.com/getpelican/pelican-plugins/tree/master/github_activity
+- https://github.com/getpelican/pelican-plugins/tree/master/gravatar
+- https://github.com/getpelican/pelican-plugins/tree/master/sitemap
+- https://github.com/getpelican/pelican-plugins/tree/master/w3c_validate
 
