added more todo

--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,8 @@ To Do:
 - TWITTER_USERNAME didn't seem to do anything
 - GITHUB_URL didn't seem to do anything
 - SITESUBTITLE doesn't show up
-
+- grep everything for "jasonantman.com", correct any bad/old absolute URLs
+- grep for my other domains, correct and fix for redirects
 
 
 Plugins:
