added more todo

--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,10 @@ To Do:
 - SITESUBTITLE doesn't show up
 - grep everything for "jasonantman.com", correct any bad/old absolute URLs
 - grep for my other domains, correct and fix for redirects
-
+- moderate comments on WP, then turn off commenting
+- migrate comments to Disqus, figure out how to back up to this repo
+- final WP post on migration to Pelican, then import here
+- migrate any drafts from WP
 
 Plugins:
 - see https://github.com/getpelican/pelican-plugins and figure out how to manage them
