adding robots, and some more stuff for testing live on GH

--- a/todo.txt
+++ b/todo.txt
@@ -22,3 +22,8 @@ Plugins:
 - https://github.com/getpelican/pelican-plugins/tree/master/sitemap
 - https://github.com/getpelican/pelican-plugins/tree/master/w3c_validate
 
+Go-Live:
+- robots.txt
+- CNAME
+- update DNS
+- update any "newblog" in pelicanconf.py
