--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,12 @@ To Do:
 - migrate comments to Disqus, figure out how to back up to this repo
 - final WP post on migration to Pelican, then import here
 - migrate any drafts from WP
+- categories and tags - check URLs/paths
+- feeds
+- Google Analytics
+- sitemap
+- twitter box/widget?
+- tag cloud actually a cloud, not a list
 
 Plugins:
 - see https://github.com/getpelican/pelican-plugins and figure out how to manage them
