--- a/todo.txt
+++ b/todo.txt
@@ -18,6 +18,7 @@ To Do:
 - sitemap
 - twitter box/widget?
 - tag cloud actually a cloud, not a list
+- validate HTML, CSS
 
 Plugins:
 - see https://github.com/getpelican/pelican-plugins and figure out how to manage them
