--- a/todo.txt
+++ b/todo.txt
@@ -19,6 +19,17 @@ To Do:
 - twitter box/widget?
 - tag cloud actually a cloud, not a list
 - validate HTML, CSS, feeds
+- Pygmentize for Nagios
+  - sending-aim-messages-from-a-perl-script
+- Pygmentize for cron
+  - secure-rsnapshot-backups-over-the-wan-via-ssh
+  - wordpress-automatically-publish-a-pending-post-each-weekday-morning-from-a-php-script
+- include code snippet plugin, to include highlighted code snippets
+- Pygmentize for syslog
+  - logging-openssh-sftp-transactions
+- Pygmentize for Xorg
+  - synaptics-touchpad-driver-synclient-in-fedora-16-xorg-with-udev
+- grep everyting for "<span" "span>" "<p" and "p>"
 
 Plugins:
 - see https://github.com/getpelican/pelican-plugins and figure out how to manage them
