--- a/todo.txt
+++ b/todo.txt
@@ -30,6 +30,8 @@ To Do:
 - Pygmentize for Xorg
   - synaptics-touchpad-driver-synclient-in-fedora-16-xorg-with-udev
 - grep everyting for "<span" "span>" "<p" and "p>"
+- blockquote style could be better
+- {.console} doesn't seem colored right
 
 Plugins:
 - see https://github.com/getpelican/pelican-plugins and figure out how to manage them
