--- a/todo.txt
+++ b/todo.txt
@@ -29,9 +29,10 @@ To Do:
   - logging-openssh-sftp-transactions
 - Pygmentize for Xorg
   - synaptics-touchpad-driver-synclient-in-fedora-16-xorg-with-udev
-- grep everyting for "<span" "span>" "<p" and "p>"
+- grep content for "<span" "span>" "<p" and "p>"
 - blockquote style could be better
 - {.console} doesn't seem colored right
+- grep output for \s+::: or ~~~
 
 Plugins:
 - see https://github.com/getpelican/pelican-plugins and figure out how to manage them
