--- a/todo.txt
+++ b/todo.txt
@@ -33,6 +33,10 @@ To Do:
 - blockquote style could be better
 - {.console} doesn't seem colored right
 - grep output for \s+::: or ~~~
+- HTML table in
+  - new-web-server-wp-optimization
+  - interesting-links-for-tuesday-january-26th-2010
+
 
 Plugins:
 - see https://github.com/getpelican/pelican-plugins and figure out how to manage them
