--- a/todo.txt
+++ b/todo.txt
@@ -36,6 +36,10 @@ To Do:
 - HTML table in
   - new-web-server-wp-optimization
   - interesting-links-for-tuesday-january-26th-2010
+- image links on
+  - update-on-my-f-250-icom-mobile-antennas-strobes
+- Pygments for sudoers
+  - root-on-a-cyclades-acs-console-server
 
 
 Plugins:
