more notes on pygments lexers

--- a/todo.txt
+++ b/todo.txt
@@ -18,16 +18,7 @@ To Do:
 - twitter box/widget?
 - tag cloud actually a cloud, not a list
 - validate HTML, CSS, feeds
-- Pygmentize for Nagios
-  - sending-aim-messages-from-a-perl-script
-- Pygmentize for cron
-  - secure-rsnapshot-backups-over-the-wan-via-ssh
-  - wordpress-automatically-publish-a-pending-post-each-weekday-morning-from-a-php-script
 - include code snippet plugin, to include highlighted code snippets
-- Pygmentize for syslog
-  - logging-openssh-sftp-transactions
-- Pygmentize for Xorg
-  - synaptics-touchpad-driver-synclient-in-fedora-16-xorg-with-udev
 - grep content for "<span" "span>" "<p" and "p>"
 - blockquote style could be better
 - {.console} doesn't seem colored right
@@ -37,6 +28,18 @@ To Do:
   - interesting-links-for-tuesday-january-26th-2010
 - image links on
   - update-on-my-f-250-icom-mobile-antennas-strobes
+
+Pygments Lexers that I want to try writing (luckily it looks like it won't be
+toooo difficult to port over GeSHi lexers - http://pygments.org/docs/lexerdevelopment/ )
+- Pygmentize for Nagios - https://github.com/GeSHi/geshi-1.0/blob/master/src/geshi/nagios.php
+  - sending-aim-messages-from-a-perl-script
+- Pygmentize for crontab
+  - secure-rsnapshot-backups-over-the-wan-via-ssh
+  - wordpress-automatically-publish-a-pending-post-each-weekday-morning-from-a-php-script
+- Pygmentize for syslog
+  - logging-openssh-sftp-transactions
+- Pygmentize for Xorg - https://github.com/GeSHi/geshi-1.0/blob/master/src/geshi/xorg_conf.php
+  - synaptics-touchpad-driver-synclient-in-fedora-16-xorg-with-udev
 - Pygments for sudoers
   - root-on-a-cyclades-acs-console-server
 
