--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@ To Do:
 - TWITTER_USERNAME didn't seem to do anything
 - GITHUB_URL didn't seem to do anything
 - SITESUBTITLE doesn't show up
+- search for any/all broken links (incl. off-site)
 - grep everything for "jasonantman.com", correct any bad/old absolute URLs
 - grep for my other domains, correct and fix for redirects
 - moderate comments on WP, then turn off commenting
