--- a/todo.txt
+++ b/todo.txt
@@ -1,27 +1,22 @@
 To Do:
 
+- migrate any drafts from WP
 - tag cloud should be an actual cloud, not a list
-- disqus
 - TWITTER_USERNAME didn't seem to do anything
 - GITHUB_URL didn't seem to do anything
 - SITESUBTITLE doesn't show up
 - search for any/all broken links (incl. off-site)
 - grep everything for "jasonantman.com", correct any bad/old absolute URLs
 - grep for my other domains, correct and fix for redirects
-- moderate comments on WP, then turn off commenting
-- migrate comments to Disqus, figure out how to back up to this repo
-- final WP post on migration to Pelican, then import here
-- migrate any drafts from WP
 - categories and tags - check URLs/paths
 - feeds
 - Google Analytics
 - sitemap
 - twitter box/widget?
-- tag cloud actually a cloud, not a list
 - validate HTML, CSS, feeds
-- include code snippet plugin, to include highlighted code snippets
+- include code snippet plugin, to include highlighted code snippets (use for GH snippets???)
 - grep content for "<span" "span>" "<p" and "p>"
-- blockquote style could be better
+- blockquote style could be better (more like WP)
 - {.console} doesn't seem colored right
 - grep output for \s+::: or ~~~
 - HTML table in
@@ -29,6 +24,7 @@ To Do:
   - interesting-links-for-tuesday-january-26th-2010
 - image links on
   - update-on-my-f-250-icom-mobile-antennas-strobes
+- grep for all images, make sure they're in the blog repo
 
 Pygments Lexers that I want to try writing (luckily it looks like it won't be
 toooo difficult to port over GeSHi lexers - http://pygments.org/docs/lexerdevelopment/ )
@@ -53,9 +49,15 @@ Plugins:
 - https://github.com/getpelican/pelican-plugins/tree/master/sitemap
 - https://github.com/getpelican/pelican-plugins/tree/master/w3c_validate
 
+Last Steps:
+- migrate comments to Disqus, turn off commeting, figure out how to back up to this repo
+
 Go-Live:
-- robots.txt
-- CNAME
-- update DNS
-- update any "newblog" in pelicanconf.py
-- update publishconf.py
+1. robots.txt
+2. CNAME
+3. update any "newblog" in pelicanconf.py
+4. update publishconf.py
+5. publish
+6. confirm with hosts file change
+7. update DNS
+
