--- a/todo.txt
+++ b/todo.txt
@@ -1,46 +1,53 @@
-To Do:
+= To Do
 
-- tag cloud should be an actual cloud, not a list
-- TWITTER_USERNAME didn't seem to do anything
-- GITHUB_URL didn't seem to do anything
-- SITESUBTITLE doesn't show up
-- search for any/all broken links (incl. off-site)
-- grep everything for "jasonantman.com", correct any bad/old absolute URLs
-- grep for my other domains, correct and fix for redirects
-- categories and tags - check URLs/paths
-- feeds
-- Google Analytics
-- sitemap
-- twitter box/widget?
-- validate HTML, CSS, feeds
-- include code snippet plugin, to include highlighted code snippets (use for GH snippets???)
-- grep content for "<span" "span>" "<p" and "p>"
-- blockquote style could be better (more like WP)
-- {.console} doesn't seem colored right
-- grep output for \s+::: or ~~~
-- HTML table in
-  - new-web-server-wp-optimization
-  - interesting-links-for-tuesday-january-26th-2010
-- image links on
-  - update-on-my-f-250-icom-mobile-antennas-strobes
-- grep for all images, make sure they're in the blog repo
+== Style / Template
+
+1. blockquote style could be better (more like WP)
+1. {.console} doesn't seem colored right
+1. tag cloud should be an actual cloud, not a list
+1. TWITTER_USERNAME didn't seem to do anything
+1. GITHUB_URL didn't seem to do anything
+1. SITESUBTITLE doesn't show up
+1. twitter box/widget?
+
+== Features
+
+1. categories and tags - check URLs/paths
+1. feeds
+1. Google Analytics
+1. sitemap
+
+== Content
+
+1. grep for all images, make sure they're in the blog repo
+1. image links on
+  * update-on-my-f-250-icom-mobile-antennas-strobes
+1. HTML table in
+  * new-web-server-wp-optimization
+  * interesting-links-for-tuesday-january-26th-2010
+1. search for any/all broken links (incl. off-site)
+1. grep everything for "jasonantman.com", correct any bad/old absolute URLs
+1. grep for my other domains, correct and fix for redirects
+1. grep content for "<span" "span>" "<p" and "p>"
+1. grep output for \s+::: or ~~~
+1. include code snippet plugin, to include highlighted code snippets (use for GH snippets???)
+1. validate HTML, CSS, feeds
+
+== Pygments Lexers
 
 Pygments Lexers that I want to try writing (luckily it looks like it won't be
 toooo difficult to port over GeSHi lexers - http://pygments.org/docs/lexerdevelopment/ )
-- Pygmentize for Nagios - https://github.com/GeSHi/geshi-1.0/blob/master/src/geshi/nagios.php
-  - sending-aim-messages-from-a-perl-script
+
 - Pygmentize for crontab
   - secure-rsnapshot-backups-over-the-wan-via-ssh
   - wordpress-automatically-publish-a-pending-post-each-weekday-morning-from-a-php-script
 - Pygmentize for syslog
   - logging-openssh-sftp-transactions
-- Pygmentize for Xorg - https://github.com/GeSHi/geshi-1.0/blob/master/src/geshi/xorg_conf.php
-  - synaptics-touchpad-driver-synclient-in-fedora-16-xorg-with-udev
 - Pygments for sudoers
   - root-on-a-cyclades-acs-console-server
 
 
-Plugins:
+== Plugins
 - see https://github.com/getpelican/pelican-plugins and figure out how to manage them
   ideally, I probably want to pull them directly into this repo
 - https://github.com/getpelican/pelican-plugins/tree/master/github_activity
@@ -48,15 +55,15 @@ Plugins:
 - https://github.com/getpelican/pelican-plugins/tree/master/sitemap
 - https://github.com/getpelican/pelican-plugins/tree/master/w3c_validate
 
-Last Steps:
-- migrate comments to Disqus, turn off commeting, figure out how to back up to this repo
+== Last Steps
+1. migrate comments to Disqus, turn off commeting, figure out how to back up to this repo
 
-Go-Live:
+== Go-Live
 1. robots.txt
-2. CNAME
-3. update any "newblog" in pelicanconf.py
-4. update publishconf.py
-5. publish
-6. confirm with hosts file change
-7. update DNS
+1. CNAME
+1. update any "newblog" in pelicanconf.py
+1. update publishconf.py
+1. publish
+1. confirm with hosts file change
+1. update DNS
 
