--- a/todo.txt
+++ b/todo.txt
@@ -25,7 +25,6 @@
 1. HTML table in
   * new-web-server-wp-optimization
   * interesting-links-for-tuesday-january-26th-2010
-1. search for any/all broken links (incl. off-site)
 1. grep everything for "jasonantman.com", correct any bad/old absolute URLs
 1. grep for my other domains, correct and fix for redirects
 1. grep content for "<span" "span>" "<p" and "p>"
@@ -56,6 +55,7 @@ toooo difficult to port over GeSHi lexers - http://pygments.org/docs/lexerdevelo
 - https://github.com/getpelican/pelican-plugins/tree/master/w3c_validate
 
 == Last Steps
+1. run apache_log_verify_site_move.py
 1. migrate comments to Disqus, turn off commeting, figure out how to back up to this repo
 
 == Go-Live
