got tags to be a cloud with my pelican-themes 169d5b31d777d8ca13a121706c5abf67ff5bfd8f ; though it's still not perfect and doesn't have enough steps in it

--- a/todo.txt
+++ b/todo.txt
@@ -2,11 +2,11 @@
 
 == Style / Template
 
-1. tag cloud should be an actual cloud, not a list
 1. TWITTER_USERNAME didn't seem to do anything
 1. GITHUB_URL didn't seem to do anything
 1. SITESUBTITLE doesn't show up
 1. twitter box/widget?
+1. site search?
 
 == Features
 
