working on sidebar social stuff

--- a/todo.txt
+++ b/todo.txt
@@ -3,10 +3,10 @@
 == Style / Template
 
 1. TWITTER_USERNAME didn't seem to do anything
-1. GITHUB_URL didn't seem to do anything
 1. SITESUBTITLE doesn't show up
 1. twitter box/widget?
 1. site search?
+1. github repos list should skip blog, and whitelist (or blacklist?) forks
 
 == Features
 
