added responsive Fork Me on Github ribbon, pelican-themes jantman-bootstrap3 branch @ 1832d1bc40300495f5871f2a37731413206a7792

--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,8 @@
 
 == Style / Template
 
+1. put tag cloud inside a LI
 1. site search?
-1. github repos list should skip blog, and whitelist (or blacklist?) forks
 
 == Plugins
 - https://github.com/getpelican/pelican-plugins/tree/master/github_activity
