add git clone of plugins, and fab file support for it

--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,6 @@
 = To Do
 
-== Style / Template
-
-1. put tag cloud inside a LI
-1. site search?
-
 == Plugins
-- https://github.com/getpelican/pelican-plugins/tree/master/github_activity
-- https://github.com/getpelican/pelican-plugins/tree/master/gravatar
 - https://github.com/getpelican/pelican-plugins/tree/master/sitemap
 - https://github.com/getpelican/pelican-plugins/tree/master/w3c_validate
 
@@ -58,4 +51,10 @@ toooo difficult to port over GeSHi lexers - http://pygments.org/docs/lexerdevelo
 1. publish
 1. confirm with hosts file change
 1. update DNS
+
+== Future Improvements
+
+1. site search box?
+1. reimplement https://github.com/getpelican/pelican-plugins/tree/master/github_activity
+   using https://github.com/grasuth/github-activity or similar JS library
 
