--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,10 @@
 = To Do
 
-== Plugins
-- https://github.com/getpelican/pelican-plugins/tree/master/sitemap
-- https://github.com/getpelican/pelican-plugins/tree/master/w3c_validate
-
 == Features
 
 1. categories and tags - check URLs/paths
 1. feeds
 1. Google Analytics
-1. sitemap
 
 == Content
 
@@ -24,7 +19,7 @@
 1. grep content for "<span" "span>" "<p" and "p>"
 1. grep output for \s+::: or ~~~
 1. include code snippet plugin, to include highlighted code snippets (use for GH snippets???)
-1. validate HTML, CSS, feeds
+1. validate CSS, feeds, sitemap
 
 == Pygments Lexers
 
@@ -40,6 +35,8 @@ toooo difficult to port over GeSHi lexers - http://pygments.org/docs/lexerdevelo
   - root-on-a-cyclades-acs-console-server
 
 == Last Steps
+
+1. verify sitemap, per https://github.com/getpelican/pelican-plugins/issues/116
 1. run apache_log_verify_site_move.py
 1. migrate comments to Disqus, turn off commeting, figure out how to back up to this repo
 
