working on WP URL equality

--- a/todo.txt
+++ b/todo.txt
@@ -19,7 +19,7 @@
 1. grep content for "<span" "span>" "<p" and "p>"
 1. grep output for \s+::: or ~~~
 1. include code snippet plugin, to include highlighted code snippets (use for GH snippets???)
-1. validate CSS, feeds, sitemap
+1. validate sitemap
 
 == Pygments Lexers
 
@@ -51,7 +51,8 @@ toooo difficult to port over GeSHi lexers - http://pygments.org/docs/lexerdevelo
 
 == Future Improvements
 
+1. validate CSS, feeds, HTML
 1. site search box?
 1. reimplement https://github.com/getpelican/pelican-plugins/tree/master/github_activity
    using https://github.com/grasuth/github-activity or similar JS library
-
+1. w3c mobileOK checker
