finished updating a bunch of links and images

--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@
 == Content
 
 1. grep for all images, make sure they're in the blog repo
+1. Grep for wiki.jasonantman.com and jasonantman.com/wiki - want static pages for anything linked. (or just make static mediawiki???)
 1. image links on
   * update-on-my-f-250-icom-mobile-antennas-strobes
 1. HTML table in
