ready to publish

--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,5 @@
 = To Do
 
-== Content
-
-1. validate sitemap
-1. verify sitemap, per https://github.com/getpelican/pelican-plugins/issues/116
-
 == Go-Live
 1. robots.txt
 1. CNAME
@@ -13,6 +8,18 @@
 1. publish
 1. confirm with hosts file change
 1. update DNS
+
+== Post-Go-Live
+
+1. test and submit sitemap
+1. verify/validate feeds
+1. check feedburner
+1. webmaster tools
+1. verify GA is working
+1. disable WordPress vhost on linode2
+1. Disqus still working
+1. Able to comment on post
+1. Disqus backup
 
 == Future Improvements
 
