publishing first new post on Pelican

--- a/todo.txt
+++ b/todo.txt
@@ -16,6 +16,7 @@
 1. Disqus still working
 1. Able to comment on post
 1. Disqus backup
+1. feedburner subscribe via email?
 
 == Future Improvements
 
