--- a/todo.txt
+++ b/todo.txt
@@ -2,20 +2,18 @@
 
 == Post-Go-Live
 
-1. test and submit sitemap
-1. verify/validate feeds
-1. check feedburner
-1. webmaster tools
-1. verify GA is working
-1. disable WordPress vhost on linode2
-1. Disqus still working
+1. test and submit sitemap - resubmitted to google, awaiting results
+1. verify/validate feeds - issues with guid being incorrect
+1. check feedburner - getting 404, dns cache?
+1. webmaster tools - need to revisit
+1. Disqus still working - not on new pages???
 1. Able to comment on post
 1. Disqus backup
-1. feedburner subscribe via email?
 
 == Future Improvements
 
 1. include code snippet plugin, to include highlighted code snippets (use for GH snippets???)
+1. feedburner subscribe via email link?
 1. validate CSS, feeds, HTML
 1. site search box?
 1. reimplement https://github.com/getpelican/pelican-plugins/tree/master/github_activity
